style.css
/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
   scroll-behavior: auto;
  }
  
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

:root {
  --ff:'Work Sans', sans-serif;

  --border:0.8px var(--accent-clr) solid;
  --secondery-border:2px var(--accent-clr) solid;

  --border-radius:6px;

  --fs-xlarge: clamp(var(--xlarge), calc(var(--xlarge) + 0.5vw), 5rem );
  --fs-large: clamp(var(--large), calc(var(--large) + 0.5vw), 4rem );
  --fs-medium: clamp(var(--medium), calc(var(--medium) + 0.5vw), 3rem );
  --fs-small: clamp(var(--small), calc(var(--small) + 0.5vw), 0.8rem );

  --accent-clr: #334a5260;
  --main-clr: #ffffff;
  --secondery-clr: #7DB3C6;

  --tiny:0.2rem;
  --small:0.5rem;
  --medium:0.8rem;
  --large:1rem;
  --xlarge:1.5rem;
}

/* General classes*/
.btn{
  padding: var(--tiny) var(--small);
  border-radius: var(--border-radius);
  border: var(--border);
  width: fit-content;
  background-color: var(--main-clr);
  color: var(--secondery-clr);
  
}

.btn:hover{
  opacity: 0.8;
}

.popup{
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  margin: auto;

  width: fit-content;
  /* min-width: 80%; */
  padding: var(--xlarge);

  border: var(--border);
  border-radius: var(--border-radius);
  
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center; 
  gap: var(--xlarge);
  backdrop-filter: blur(10px);
  }

.cell{
  border: var(--border);
  border-radius: var(--border-radius);
  padding: 1rem;
}

/* /////////////// */

body{
  font-family:var(--ff);
  color: var(--secondery-clr);
  /* display: flex;
  flex-direction: column;
  justify-content: space-between; */
}

.header{
  display: flex;
  justify-content: center;
  margin-bottom: var(--large);
  padding: var(--medium);
  background-color: var(--main-clr);
  -webkit-box-shadow: 1px 1px 15px -6px #334A52; 
  box-shadow: 1px 1px 15px -6px #334A52;
}

h1.title{
  color: var(--secondery-clr);
  font-size: var(--fs-xlarge);
  font-style: italic;
}

.main{
  position: relative;
  min-width: fit-content;
  max-width: 50vw;
  margin: 25% auto;
  padding: 2rem;
}

.new-game-btn1{
  margin: var(--medium) auto;
  font-size: var(--fs-large);
  width:fit-content;
}

form{
  position: relative;
  display: flex;
  flex-direction: column;
  border: var(--border);
  border-radius: var(--border-radius);
  align-items: center;
  padding: var(--medium);
  gap: var(--small);
  min-height: 200px;
  /* min-width: fit-content; */
}

.guess-input-lable{
  font-size: var(--fs-xlarge);
  text-align: center;
}

#guess-input{
  font-size: var(--fs-large);
  color: var(--secondery-clr);
  border: var(--border);
  border-radius: var(--border-radius);
  text-align: center;
}

#guess-input:focus{
  outline: var(--secondery-border);
}

.error{
  border: var(--border);
  border-radius: 2px;
  padding: var(--tiny);
  margin-top: var(--small);
  font-size: calc(var(--fs-small) + 0.1vw);
  animation: fadeIn 1.5s, shake 2s infinite;
  animation-direction: alternate;
  animation-timing-function: ease-in-out;
}

@keyframes shake {
  0% {
    transform: skewY(2.5deg);
  }
  100% {
    transform: skewY(-2.5deg);
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;;
  }
  100% {
    opacity: 1;
  }
}

.form-btns{
  padding: var(--small) var(--medium);
  font-size: var(--fs-medium);
  position: absolute;
  bottom: 4%;
}

#submit-btn{
  margin: auto;
}

.secret-cell-container{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.lower-txt,
.higher-txt{
  font-size: var(--fs-small);
}

.secret-number-cell{
  /* position: relative; */
  width: fit-content;
  font-size: var(--fs-large);
}

.help-txt-container{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.help-txt-arrow{
  font-size: var(--fs-large);
  animation: fadeIn 1.5s infinite;
  animation-direction:alternate-reverse;
  animation-timing-function: ease-in-out;

}
p.help-txt{
  font-size: var(--fs-medium);
  text-align: center;
}

#guess-chart{
  display: flex;
  width: fit-content;
  margin: var(--large) auto;
  gap: var(--small);
}

.guess-cell{
  border-style: dashed;
  height: fit-content;
  margin: auto;
}
p.guess{
  font-size: var(--fs-large);
}


@keyframes slideIn {
  0%{
    transform: translatey(0%);
    opacity: 0.2;
  }
  
  100%{
    transform: translatey(180%);
    opacity: 1;
  }
}


.slideIn {
  animation-name: slideIn;
  animation-duration: 1s;
  animation-iteration-count:1;
  animation-fill-mode: forwards;
}

/* The animation code */
@keyframes jump {
  0%{
    transform: translatey(0%);
  }

  50% {
    transform: translatey(-20%);
  }

  60%{
    transform: translatey(-10%);
  }

  70%{
    transform: translatey(0%);
  }

  80%{
    transform: translatey(-5%);
  }

  100%{
    transform: translatey(0%);
  }
}

/* The element to apply the animation to */
div.jump {
  /* width: 100px; */
  /* height: 100px; */
  /* background-color: red; */
  animation-name: jump;
  animation-duration: 2s;
  animation-iteration-count: 5;
  animation-timing-function: ease-out;
  backdrop-filter: blur(10px);
}

footer{
  width: 100%;
  min-height: 35px;
  position: fixed;
  bottom: 0%;
  display: flex;
  justify-content:center;
  align-items: center;
  /* text-align: center */
  -webkit-box-shadow: 1px 1px 15px -6px #334A52; 
  box-shadow: 1px 1px 15px -6px #334A52;
}

@media (min-width:390px) {
  .main{
    margin: 15% auto;
  }
}

@media (min-width:615px) {
  .main{
    margin: 6% auto;
    max-width: 30vw;
  }
  form{
    padding-bottom: 4rem;
    min-height: 230px;
  }
  .form-btns{
    bottom: 1%;
  }
}

@media (min-width:1280px) {
  .main{
    margin: 1% auto;
  }
}

